microserv-billing/src/main/java/org/example/microservbilling/error/exception/NotExistsException.java
package org.example.microservbilling.error.exception;

public class NotExistsException extends RuntimeException{

    public NotExistsException(String message) {
        super(message);
    }
}
